Fix some layout issues on IE
The compatibility is not prefect but at least the app can be used and it
looks somewhat correct again. Most notably, the actions menus on the
navigation pane are not accessible. Furthermore, expanding the collapsed
navigation pane on narrow browser window doesn't play well along with the
controls pane.

--- a/css/app/music-actions-menu.css
+++ b/css/app/music-actions-menu.css
@@ -63,3 +63,15 @@
 .app-music #app .popovermenu.submenu span {
 	margin-left: 16px;
 }
+
+/* Compatibility for Internet Explorer which doesn't support the var() syntax; IE is supported on OC but not on NC */
+.ie .app-music #app .popovermenu ul li,
+.ie .app-music #app .popovermenu ul li a {
+	line-height: 44px;
+}
+
+.ie .app-music #app .popovermenu ul li a .icon {
+	padding-top: 22px;
+	padding-bottom: 22px;
+	padding-left: 44px;
+}
